# retrieval-up

./: .gitignore  _hdbscan_debug.json  _test_clustering_cache.json  continuar.py  eval_ds_ejemplo.json  evaluar_asr.py  evaluar_ret.py  readme.md  run_all.py  test_clustering.py
01. descargador/: pyproject.toml
01. descargador/src/descargador/: __main__.py
02. procesador de audio/: pyproject.toml
02. procesador de audio/src/procesador/: __main__.py  vad_energia.py  vad_silero.py  vad_silvero.py  vad_wbrtc.py  vad_webrtc.py
03. transcriptor/: pyproject.toml
03. transcriptor/src/transcriptor/: __main__.py  chunks.py  cohere_asr.py  texto.py  vosk_asr.py  whisper_asr.py
04. corrector de texto/: pyproject.toml
04. corrector de texto/src/corrector/: __main__.py  alinear.py  kredor.py  p_all.py  silero.py
05. fragmentador/: pyproject.toml
05. fragmentador/src/fragmentador/: __main__.py  _comun.py  semantico.py  tamano_fijo.py
06. vectorizador/: pyproject.toml
06. vectorizador/src/vectorizador/: __main__.py  prefijos.py
07. indexador/: pyproject.toml
07. indexador/src/indexador/: __main__.py  bm25.py  lance.py  milvus.py  qdrant.py
08. recuperador/: pyproject.toml
08. recuperador/src/recuperador/: __main__.py  busqueda.py  fusionado.py  rerank.py  resultados.py
09. gui/: pyproject.toml
09. gui/src/gui/: __main__.py  app.py  backfill_duracion.py
09. gui/src/gui/templates/: base.html  browse.html  pipeline.html
09. insights/: pyproject.toml
09. insights/src/insights/: __init__.py  __main__.py  agrupador.py  corpus.py  encontrados.py  exportar.py  registro.py  seleccionados.py
compartido/: pyproject.toml
compartido/src/compartido/: bm25.py  embedders.py  indice_utils.py  json_utils.py  rutas.py  sqlite_utils.py  utils.py
gui/: pyproject.toml
gui/src/gui/: __main__.py  app.py
gui/src/gui/templates/: analytics.html  base.html  browse.html  pipeline.html  search.html
