[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "descargador"
version = "0.1.0"
description = "Descarga y extrae audio desde fuentes locales y externas"
requires-python = ">=3.11,<3.13"
dependencies = [
    "yt-dlp>=2024.0",
]

[project.scripts]
descargar = "descargador.__main__:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]