[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "procesador"
version = "0.1.0"
description = "Limpia ruido y aplica VAD (Voice Activity Detection)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "soundfile>=0.12",
    "noisereduce>=3.0",
    "silero-vad>=5.1",
    "webrtcvad-wheels>=2.0.10",
]

[project.scripts]
procesar = "procesador.__main__:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]