[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcriptor"
version = "0.1.0"
description = "Genera transcripciones de archivos de audio"
requires-python = ">=3.11,<3.13"
dependencies = [
    "vosk>=0.3.45",
    "soundfile>=0.12",
    "numpy>=1.26"
]


[project.optional-dependencies]
# Vosk queda instalado por defecto como backend base/fallback.
# Los motores opcionales se exponen como extras explicitos por backend y
# dispositivo para evitar combinaciones ambiguas al instalar.

# Whisper usa la misma dependencia en CPU y GPU; la diferencia real depende del
# entorno CUDA disponible al ejecutar.
# CPU: pip install -e ".[whisper]"
# GPU: pip install -e ".[whisper]"
whisper = [
    "faster-whisper>=1.0",
]

# Cohere Transcribe (GGUF via CrispASR).
# La inferencia se ejecuta mediante el binario C++ cohere-main de CrispASR;
# huggingface_hub se usa unicamente para descargar los archivos .gguf.
# Modelo fuente:  CohereLabs/cohere-transcribe-03-2026
# Cuantizaciones: cstr/cohere-transcribe-03-2026-GGUF
# Runtime C++:    https://github.com/CrispStrobe/CrispASR (rama ggml)
#   pip install -e ".[cohere-transcribe]"
cohere-transcribe = [
    "huggingface_hub>=0.23",
]

# Todos en CPU
#   pip install -e ".[todos]"
# Todos en GPU
#   pip install -e ".[todos]" --extra-index-url https://download.pytorch.org/whl/cu128
todos = [
    "faster-whisper>=1.0",
    "huggingface_hub>=0.23",
]

[project.scripts]
asr = "transcriptor.__main__:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]