[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcriptor"
version = "0.1.0"
description = "Genera transcripciones de archivos de audio"
requires-python = ">=3.11,<3.13"
dependencies = [
    "vosk>=0.3.45",
    "soundfile>=0.12",
    "numpy>=1.26"
]


[project.optional-dependencies]
# Vosk queda instalado por defecto como backend base/fallback.
# Los motores opcionales se exponen como extras explicitos por backend y
# dispositivo para evitar combinaciones ambiguas al instalar.

# Whisper usa la misma dependencia en CPU y GPU; la diferencia real depende del
# entorno CUDA disponible al ejecutar.
# CPU: pip install -e ".[whisper]"
# GPU: pip install -e ".[whisper]"
whisper = [
    "faster-whisper>=1.0",
]

# Cohere Transcribe (native via HuggingFace transformers).
# Modelo fuente:  CohereLabs/cohere-transcribe-03-2026
# CPU: pip install -e ".[cohere-transcribe]"
# GPU: pip install -e ".[cohere-transcribe]" --extra-index-url https://download.pytorch.org/whl/cu128
cohere-transcribe = [
    "transformers>=4.52",
    "torch>=2.2",
    "tqdm>=4.66",
]

# Todos en CPU
#   pip install -e ".[todos]"
# Todos en GPU
#   pip install -e ".[todos]" --extra-index-url https://download.pytorch.org/whl/cu128
todos = [
    "faster-whisper>=1.0",
    "huggingface_hub>=0.23",
]

[project.scripts]
asr = "transcriptor.__main__:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]