[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fragmentador"
version = "0.1.0"
description = "Fragmenta el texto corregido en chunks para su vectorizacion."
requires-python = ">=3.11,<3.13"
dependencies = []

[project.scripts]
frag = "fragmentador.__main__:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
