[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recuperador"
version = "0.1.0"
description = "Busqueda hibrida (densa + BM25) sobre el indice vectorial."
requires-python = ">=3.11,<3.13"
dependencies = [
	"compartido",
	"lancedb>=0.14",
	"tantivy>=0.22",
	"sentence-transformers>=4.0,<6.0",
	"numpy>=1.24",
	"spacy>=3.0",
	"es-core-news-lg @ https://github.com/explosion/spacy-models/releases/download/es_core_news_lg-3.8.0/es_core_news_lg-3.8.0-py3-none-any.whl",
]

[project.scripts]
recuperar = "recuperador.__main__:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
