[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gui"
version = "0.1.0"
description = "Web GUI for browsing, indexing, searching and insights"
requires-python = ">=3.11,<3.13"
dependencies = [
    "flask>=3.0",
    "compartido",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
