[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insights"
version = "0.1.0"
description = "Modulo de analitica docente: vista agregada del corpus indexado y del comportamiento de busqueda."
requires-python = ">=3.11,<3.13"
dependencies = [
	"compartido",
	"numpy>=1.24",
	"scikit-learn>=1.3",
	"hdbscan>=0.8.33",
	"keybert>=0.8",
	"sentence-transformers>=4.0,<6.0",
]

[project.scripts]
insights = "insights.__main__:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
