[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compartido"
version = "0.1.0"
description = "Datos compartidos y funciones auxiliares para manipulación de archivos JSON"
requires-python = ">=3.11,<3.13"
dependencies = [
    "psutil>=5.9",
    "transformers>=4.40,<5.0",
    "spacy>=3.0",
    "es-core-news-lg @ https://github.com/explosion/spacy-models/releases/download/es_core_news_lg-3.8.0/es_core_news_lg-3.8.0-py3-none-any.whl",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
